# ik_rss_solver

./: CMakeLists.txt  exotica_plugins.xml  package.xml
include/ik_rss_solver/: IKSolver.h
init/: IKRSSSolver.in
src/ik_rss_solver/: IKSolver.cpp
